test/invalid/WrongMethodDeclarationToken/WrongMethodDeclarationToken.plume
/**
 * @author 35237, Marcos Vasco
 */
abstract class WrongMethodDeclarationToken extends Object is

	abstract method getSalary : () : Integer
	
	abstract method raise : (Integer raiseVal) -> Empregado